Fixed broken nav link color in dark mode

--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -37,9 +37,6 @@ h3
 h4
 	font-size: 1.6rem
 
-.darkmode--activated a
-	color: white
-
 a
 	color: black
 
