--- a/_sass/components/nav.sass
+++ b/_sass/components/nav.sass
@@ -1,3 +1,9 @@
+.darkmode--activated .nav .list .item .link
+    color: white
+
+.nav .list .item .link
+    color: black
+
 .nav,
 .nav-home
     > .list
@@ -10,7 +16,7 @@
 
         > .item > .link
             display: inline-block
-            font-weight: 300
+            font-weight: normal
             font-size: 1.4rem
             padding: 20px 10px
             text-decoration: none
@@ -26,7 +32,6 @@
         > .item > .link
             font-size: 1.4rem
             padding: 20px 10px
-            font-weight: 400
 
 .nav-home
     margin-top: 40px
